@@ -4,6 +4,6 @@
   "name": "SmithingPlus",
   "authors": [ "jayu" ],
   "description": "Smithing tweaks and QOL improvements.",
-  "version": "1.6.0-rc.3",
+  "version": "1.6.0",
   "dependencies": { "game": "" }
 }
